Fix stability flags: use system properties instead of -DargLine to avoid overriding POM argLine
Agent-Logs-Url: https://github.com/Ben-Esquivel-Music/java-digital-audio-workstation/sessions/fdd1d067-1a29-442d-9e08-d0547978c826

Co-authored-by: BenEsquivelMusic <198515647+BenEsquivelMusic@users.noreply.github.com>